# nlp-with-transformers

./: .gitignore  Dockerfile  Notes.ipynb  docker-compose.yml  identify_similar_sentences.py  pyproject.toml
chapter_1/: chapter_1.ipynb  chapter_1.py
chapter_2/: chapter_2.py
config/: sequence_classifier_project_config.example.yml
data/: small_training_dataframe.csv  test_dataframe.csv  validation_dataframe.csv
scripts/book_chapters/chapter_1/: chapter_1.ipynb
scripts/book_chapters/utilities/: utils.py
text_classifier/: config.py  model.py  trainer.py
transformers/: utils.py
transformers/data_manager/: Template.xlsx  data_utils.py
transformers/models/: model.py
transformers/trainer/: sequence_classifer_trainer.py
